rnsc/test_data/rns_integration/error/parser/super_directive/trailing_token.rns

.class MyClass

.super java/lang/String java/lang/Other ; trailing tokens, but should note about multiple inheritance as well